--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "antd": "^5.21.4",
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "moment": "^2.30.1"
   }
 }
